--- a/src/Forms/GenerarVenta.form
+++ b/src/Forms/GenerarVenta.form
@@ -529,9 +529,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Vender"/>
       </Properties>
-      <AccessibilityProperties>
-        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Vender"/>
-      </AccessibilityProperties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btVenderActionPerformed"/>
       </Events>
@@ -577,10 +574,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
-                <Column editable="true" title="CANTIDAD" type="java.lang.Integer"/>
+                <Column editable="true" title="CANTIDAD" type="java.lang.String"/>
                 <Column editable="true" title="NOMBRE" type="java.lang.String"/>
-                <Column editable="true" title="PRECIO UNITARIO" type="java.lang.Double"/>
-                <Column editable="true" title="SUBTOTAL" type="java.lang.Double"/>
+                <Column editable="true" title="PRECIO UNITARIO" type="java.lang.String"/>
+                <Column editable="true" title="SUBTOTAL" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
