--- a/src/Forms/GenerarVenta.form
+++ b/src/Forms/GenerarVenta.form
@@ -124,11 +124,13 @@
                   <Component id="panelProducto" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lbTotal" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="lbPedidos" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btVender" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lbPedidos" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btVender" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="jScrollPane2" pref="266" max="32767" attributes="0"/>
@@ -459,7 +461,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbPrecio">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Precio: $00.00"/>
+            <Property name="text" type="java.lang.String" value="Precio: $ 0.00"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -577,7 +579,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="5e" red="bf" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Total a pagar: $00.00"/>
+        <Property name="text" type="java.lang.String" value="Total a pagar: $ 0.00"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbEmpleado">
@@ -605,7 +607,6 @@
                 <Column editable="true" title="SUBTOTAL" type="java.lang.String"/>
               </Table>
             </Property>
-            <Property name="cellSelectionEnabled" type="boolean" value="false"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
             </Property>
